# terminal-manager

./: .env.example  .gitignore  CALENDAR-IMPLEMENTATION-GUIDE.md  CALENDAR-INTEGRATION-COMPLETE-SUMMARY.md  CALENDAR-SCHEDULER-COMPLETE-SUMMARY.md  CONTRIBUTING.md  FIXES-NEEDED.md  FRONTEND-CALENDAR-INTEGRATION-GUIDE.md  FRONTEND-INTEGRATION-COMPLETE.md  README.md  STARTUP-FIX-COMPLETE.md  TEST-DB-CONNECTION.ps1  UI-COMPREHENSIVE-TEST-REPORT.md  clean-restart.ps1  jest.config.cjs  package-lock.json  package.json  restart-backend-secure.bat  verify-backend-secure.bat  verify-security-deployment-fixed.cjs  verify-security-deployment.cjs
backend/: .coveragerc  .env.alt  .env.example  coverage.xml  create_scheduled_tasks_tables.sql  pyproject.toml  pytest.ini  requirements-export-import.txt  requirements-metrics.txt  requirements.txt  run_migration.py  terminal.db  test_terminal_spawn.py
backend/app/: config.py  db_setup.py  main.py
backend/app/database/: __init__.py
backend/app/models/: __init__.py  budget_history.py  metrics.py  project.py  scheduled_claude_task.py  session.py  stored_event.py  terminal.py
backend/app/notifications/: email_service.py  push_service.py
backend/app/routers/: best_of_n.py  budget.py  budget_secure.py  (+15 more)
backend/docs/: API-DOCUMENTATION.md  ARCHITECTURE.md  MCP-INTEGRATION-SUMMARY.md  MCP-SETUP.md  METRICS_AGGREGATION_GUIDE.md  METRICS_API_QUICK_REFERENCE.md
backend/scripts/: mcp_stub_server.py  test_mcp_health.py
backend/tests/: test_mcp_integration.py  test_mcp_proxy_stub.py  test_metrics_aggregation.py  test_projects_api.py
(+379 files in other folders)
