[project]
name = "terminal-manager-backend"
version = "1.0.0"
description = "Backend for Terminal Manager"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "python-multipart==0.0.6",
    "psycopg2-binary==2.9.9",
    "sqlalchemy==2.0.23",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.1.1",
    "websockets==12.0",
    "python-socketio==5.10.0",
    "jinja2==3.1.2",
    "aiosmtplib==3.0.1",
    "pywebpush==1.14.0",
    "py-vapid==1.9.0",
    "apscheduler==3.10.4",
    "python-dotenv==1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings==2.1.0",
    "python-dateutil==2.8.2",
    "pytz==2023.3"
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "httpx>=0.25.2",
    "black>=23.11.0",
    "flake8==6.1.0",
    "mypy>=1.7.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"